# libint

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .hgignore  .hgtags  .pre-commit-config.yaml  .project  .travis.yml  CHANGES  CITATION  CMakeLists.txt  FindLibint2.cmake  INSTALL  INSTALL.md  LICENSE  Makefile  README  README.md  README_CMake.md  appveyor.yml  autogen.sh  configure  configure.ac  configure.in  index.html  libint2.pc.in  params.json  runconfig_gcc_libint  updates  updates-libint2
.github/workflows/: ci_cmake.yml  cmake.yml
archive_libtool/: CMakeLists.txt.export  config.h.in  configure.ac  libint2-config.cmake.in
cmake/: FindStandardMathLibraryC.cmake  Libint2Config.cmake.in  LibintConfig.cmake.in  int_am.cmake  int_computed.cmake.in  int_versions.cmake  libint.pc.in  libint2-config.cmake.in  libint2.pc.cmake.in  options.cmake  psi4OptionsTools.cmake  shell_orderings.cmake  user_has_defined.cmake
cmake/modules/: .git_archival.txt  DynamicVersion.cmake  FindEigen3.cmake  FindGMP.cmake  FindMultiprecision.cmake  FindTargetEigen3.cmake  autocmake_safeguards.cmake  int_am.cmake  int_checkboost.cmake  int_computed.cmake.in  int_orderings.cmake  int_userreal.cmake  int_versions.cmake  options.cmake  xhost.cmake
doc/: CMakeLists.txt  Libint_Logo3.ai  Libint_Logo3_alt.ai  Libint_Logo3_alt.eps  MakeRules.in  MakeSuffixRules.in  MakeVars.in  Makefile  doxygen.cfg  macros.tex.in
doc/classdoc/: CMakeLists.txt  Makefile  doxygen.cfg  doxygen.cfg.in
doc/installation/: installation.tex
doc/progman/: Makefile  lstusecpp.cc  macros.tex  macros.tex.in  progman.tex  refs.bib
doc/sample/: Readme  test_eri.cc
export/: CMakeLists.txt.export  INSTALL.export  LICENSE.export  MakeRules.export  MakeVars.export  Makefile  Makefile.doc.export  Makefile.export  Makefile.fortran.export  Makefile.tests.export  configure.export  libint2_config.export  test_eri.cc.export
export/cmake/: CMakeLists.txt.export  CMakeLists.txt.include.export  configuration-gen.py  hftest.cmake  libint2-config.cmake.in  libint2.pc.cmake.in
export/fortran/: Makefile  c_to_f.py  fortran_example.F90  libint_f.F90  test-eri.cc  test.cc
fortran/: fortran_example.F90
include/: libint2.h  libint2.hpp  libint2_config.h.in  libint2_intrinsic_operations.h  libint2_intrinsic_types.h  libint2_types.h  stdarray.h  stdarray_bits.h
include/libint2/: any.h  atom.h  basis.h  basis.h.cmake.in  basis.h.in  boys.h  boys_cheb7.h  boys_fwd.h  braket.h  cartesian.h  cgshell_ordering.h  cgshell_ordering.h.in  cgshellinfo.h  config.h.cmake.in  config.h.in  config2.h.cmake.in  cxxapi.h  cxxstd.h  deriv_iter.h  deriv_map.h  dfbs_generator.h  diis.h  engine.h  engine.impl.h  initialize.h  intpart_iter.h  intrinsic_operations.h  memory.h  numeric.h  pivoted_cholesky.h  shell.h  shgshell_ordering.h  soad_fock.h  solidharmonics.h  statics_definition.h  stdarray.h  tenno_cheb.h  tensor.h  timer.h  type_traits.h  (+3 more)
lib/: MakeRules  MakeSuffixRules
lib/autoconf/: acx_check_cpp11.m4  acx_check_eigen.m4  acx_check_gmpxx.m4  libtool.m4
lib/basis/: 3-21g.g94  6-311g_d_p_.g94  6-311gss.g94  6-31G_d_.g94  6-31Gs.g94  6-31g.g94  6-31g_d_p_.g94  6-31gs.g94  6-31gss.g94  ano-rcc.g94  aug-cc-pV5Z-CABS.g94  aug-cc-pv5z-cabs.g94  aug-cc-pvdz-cabs.g94  aug-cc-pvdz.g94  aug-cc-pvqz-cabs.g94  aug-cc-pvtz-cabs.g94  augmentation-cc-pv5z-jkfit.g94  augmentation-cc-pv5z-ri.g94  augmentation-cc-pv5z.g94  augmentation-cc-pv6z-ri.g94  augmentation-cc-pv6z.g94  augmentation-cc-pv7z.g94  augmentation-cc-pvdz-jkfit.g94  augmentation-cc-pvdz-ri.g94  augmentation-cc-pvdz.g94  (+63 more)
python/: CMakeLists.txt  setup.py.in
python/src/libint2/: basis.h  engine.cc  libint2.cc
python/tests/: hf.py  test_hf.py  test_libint2.py
src/: CMakeLists.txt  Makefile
src/lib/: CMakeLists.txt  MakeRules.in  MakeSuffixRules.in  MakeVars.in  Makefile
src/lib/libderiv/: CMakeLists.txt  LibintderivConfig.cmake.in  Makefile  Makefile.library
src/lib/libint/: CMakeLists.txt  CMakeLists.txt.export  GenericContract.h  GenericGaussDeriv.h  GenericGaussDeriv.impl.h  GenericScale.h  INSTALL.export  ITR_xs_xs.h  LICENSE.export  LibintintConfig.cmake.in  MakeVars.features.in  Makefile  Makefile.library  OSVRR_sx_sx.h  OSVRR_sx_sx_deriv.h  OSVRR_xs_xs.h  OSVRR_xs_xs_deriv.h  VRR_GTG_1d_xx_xx.h  VRR_GTG_1d_xx_xx_vec.h  VRR_r12kg12_xs_xs.h  boys.h  configuration.cc  configuration.cc.cmake.in  cxxapi.h  engine.cpp  engine.h  features.cmake.in  features.in  libint2_memory.h  populate.cmake  shell.h  simple_api.h  vector.h  vector_ppc.h  vector_x86.h  vrr_build.c
src/lib/libint/fortran/: c_to_f.py  make_defs.py
src/lib/libint/tests/: CMakeLists.txt
src/lib/libint/tests/eri/: test.cc
src/lib/libint/tests/fortran/: fortran_example.F90  test-eri.cc  test.cc
src/lib/libint/tests/hartree-fock/: hartree-fock++-validate.py  hartree-fock++.cc  hartree-fock.cc  hftest.cmake
src/lib/libint/tests/unit/: c-api-util.cc  c-api.c  test-1body.cc  test-2body.cc  test-basis.cc  test-c-api.cc  test-core.cc  test-permute.cc  test-precision.cc  test-shell-order.cc  test-util.cc  test.cc  test_g.cc  test_s.cc
src/lib/libr12/: Makefile  Makefile.library  r_vrr_build.c  t1_vrr_build.c  t2_vrr_build.c
tests/: CMakeLists.txt  MakeVars.in
tests/bagel/: Makefile  test.cc
tests/core/: CMakeLists.txt  chrono.cc  profile.cc  test.cc
tests/eri/: CMakeLists.txt  Makefile  eri.h  generate.cc  generate_eri_code.cc  prep_libint2.h  run_time_eri.pl.in  ssss.nb  stdtests.pl.in  test++-core.cc  test.cc  test_eri.cc  test_eri.pl.in  test_eri_rys.cc  test_eri_rys_vec.cc  time_eri.cc  time_eri.pl.in
tests/hartree-fock/: Makefile  h2o.xyz  h2o_rotated.xyz  hartree-fock++-validate.py  hartree-fock++.cc  hartree-fock-validate.py  hartree-fock.cc  hftest.cmake
tests/rysq/: Makefile  test.cc
tests/unit/: Makefile  c-api-util.cc  c-api.c  catch.hpp  fixture.h  test-1body.cc  test-2body.cc  test-basis.cc  test-boys.cc  test-c-api.c  test-c-api.cc  test-core-ints.cc  test-core.cc  test-df-autogen.cc  test-permute.cc  test-precision.cc  test-shell-order.cc  test-util.cc  test.cc  test_g.cc
(+36 files in other folders)
